--- a/view-log-frontend/src/index.html
+++ b/view-log-frontend/src/index.html
@@ -5,9 +5,16 @@
   <title>ViewLogFrontend</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+
+  <!-- Counter.dev analytics (correct position) -->
+  <script src="https://cdn.counter.dev/script.js"
+          data-id="c305dc05-83e8-422a-a19f-f0a601e0a6bb"
+          data-utcoffset="6"></script>
+
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
+
 <body>
-  <app-root></app-root>
+<app-root></app-root>
 </body>
 </html>
